k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sp25-group6-mongo
  labels:
    app: sp25-group6-mongo
spec:
  selector:
    matchLabels:
      app: sp25-group6-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: sp25-group6-mongo
    spec:
      containers:
        - image: sp25-group6-backend_5001:mongo
          imagePullPolicy: Never
          name: sp25-group6-mongo
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: sp25-group6-mongo
spec:
  type: LoadBalancer
  selector:
    app: sp25-group6-mongo
  ports:
    - port: 5001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sp25-group6
  labels:
    app: sp25-group6
spec:
  selector:
    matchLabels:
      app: sp25-group6
  replicas: 1
  template:
    metadata:
      labels:
        app: sp25-group6
    spec:
      containers:
        - image: sp25-group6-backend_3001:server
          imagePullPolicy: Never
          name: sp25-group6
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: sp25-group6
spec:
  type: LoadBalancer
  selector:
    app: sp25-group6
  ports:
    - port: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sp25-group6-frontend
  labels:
    app: sp25-group6-frontend
spec:
  selector:
    matchLabels:
      app: sp25-group6-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: sp25-group6-frontend
    spec:
      containers:
        - image: sp25-group6-frontend:frontend
          imagePullPolicy: Never
          name: sp25-group6
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: sp25-group6-frontend
spec:
  type: LoadBalancer
  selector:
    app: sp25-group6-frontend
  ports:
    - port: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sp25-group6
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /auth
            backend:
              service:
                name: sp25-group6
                port:
                  number: 3001
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: sp25-group6-mongo
                port:
                  number: 5001
          - pathType: Prefix
            path: /
            backend:
              service:
                name: sp25-group6-frontend
                port:
                  number: 3000
